--- a/CSS/style.css
+++ b/CSS/style.css
@@ -60,6 +60,7 @@
     padding: 0;
     font-family: var(--mono-font);
     font-size: 0.92rem;
+    color: white;
 }
 a {
     text-decoration: none;
@@ -77,6 +78,18 @@ a {
     align-content: center; /* cross axis of container - V */
     align-items: center; /* all children on cross axis - vertical center*/
     justify-content: flex-start; /* main axis of conatiner - H */
+}
+.flex-display-center-sb{
+    display: flex;
+    align-content: center; /* cross axis of container - V */
+    align-items: center; /* all children on cross axis - vertical center*/
+    justify-content: space-between; /* main axis of conatiner - H */
+}
+.flex-display-start-center{
+    display: flex;
+    align-content: flex-start; /* cross axis of container - V */
+    align-items: flex-start; /* all children on cross axis - vertical center*/
+    justify-content: center; /* main axis of conatiner - H */
 }
 .flex-display-start-center{
     display: flex;
@@ -110,18 +123,23 @@ a {
 .topnav{
     width: 100%;
     height:var(--navbar-height);
-    /* position: fixed; */
+    position: fixed;
     display: flex;
     z-index: 20000;
     align-items: center;
     justify-content: space-between;
     background: rgba(32, 32, 32, 0.12);
     backdrop-filter: blur(10px);
+    padding: 0 25px;
+}
+.topnav a {
+    color: white;
+    font-family: var(--mono-font);
 }
 .nav-title{
+    font-family: Neue Machina regular !important;
     font-size: 20px;
-    margin-left: 25px;
-    color: var(--yellow);
+    color: var(--yellow) !important;
 }
 .link-section{
     display: flex;
@@ -135,6 +153,31 @@ a {
     margin-left: 10%;
 }
 
-.nav-item3{
-    margin-right: 20px;
+.content-wrapper{
+    height: 100vh;
+    width: 100vw;
+    background-color: #333;
+}
+
+.video-wrapper{
+    
+}
+.destinations{
+    position: absolute;
+    margin: 16% 0 0 10%;
+    width: 80%;
+}
+.place{
+    align-items: baseline;
+}
+.destination-title{
+    font-size: 36px;
+    margin-bottom: 15px;
+}
+.continent{
+    font-family: Neue Machina regular;
+    font-size: 18px;
+    border: 1px solid white;
+    padding: 6px 20px 3px 20px;
+    width: fit-content;
 }
