--- a/CSS/style.css
+++ b/CSS/style.css
@@ -160,7 +160,13 @@ a {
 }
 
 .video-wrapper{
-    
+   position: absolute; 
+   height: 100vh;
+   width: 100vw;
+}
+.video-wrapper img{
+    height: 100%;
+    width: 100%;
 }
 .destinations{
     position: absolute;
@@ -176,8 +182,8 @@ a {
 }
 .continent{
     font-family: Neue Machina regular;
-    font-size: 18px;
+    font-size: 16px;
     border: 1px solid white;
-    padding: 6px 20px 3px 20px;
+    padding: 6px 18px 3px 18px;
     width: fit-content;
 }
