--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,7 +39,7 @@
              url('font/Neue Machina/medium/NeueMachina-Medium.woff2') format('woff2');
 }
 @font-face {
-    font-family: 'Neurial Grotesk bold';
+    font-family: 'Neue Machina bold';
         src: url('font/Neue Machina/bold/NeueMachina-Bold.eot') format('eot'),
              url('font/Neue Machina/bold/NeueMachina-Bold.svg') format('svg'),
              url('font/Neue Machina/bold/NeueMachina-Bold.ttf') format('ttf'),
@@ -262,23 +262,62 @@ a {
     cursor: pointer;
 }
 
-.side-bar-left{
+.side-bar{
     height: 100%;
+    padding: 18px;
     width: 0%;
-    background-color: red;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
+    visibility: hidden;
+    opacity: 0;
+    overflow: scroll;
 }
-.side-bar-right{
-    height: 100%;
-    width: 0%;
-    background-color: red;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+.city-card{
+    display: flex;
+    flex-direction: column;
 }
+.city-card span{
+    font-family: var(--sans-font);
+    font-size: 12px;
+}
+.time{
+    font-family: inherit;
+    font-size: 24px;
+    margin-bottom: 4px;
+}
+.line{
+    width: 100%;
+    height: 1px;
+    margin: 12px 0 42px 0;
+    background-color: white;
+}
+.sb-left{
+    
+}
+
 .unfolded{
+    visibility: visible;
+    opacity: 1;
     width: 24%;
 }
 .rotate{
     transform: rotate(180deg);
+}
+
+.waiting-time-big{
+    font-family: var(--sans-font);
+    font-size: 38px;
+    line-height: 20px;
+}
+.waiting-time-big span{
+    font-family: Neue Machina regular;
+}
+.next-spot{
+    margin-top: 24px;
+    font-family: Neue Machina regular;
+}
+.sans-bold{
+    font-family: Neue Machina bold;
 }
