--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,6 +52,7 @@
     --mono-font: Suisse Intl regular;
     --navbar-height: 48px;
     --yellow: #F9FD60;
+    --grey: #c4c4c4
 }
 
 *, body{
@@ -61,6 +62,9 @@
     font-family: var(--mono-font);
     font-size: 0.92rem;
     color: white;
+}
+body{
+    background-color: var(--grey);
 }
 a {
     text-decoration: none;
@@ -147,14 +151,11 @@ a {
 }
 .link-section{
     display: flex;
-    width: 30%;
+    width: 25%;
     justify-content: space-around;
 }
 .link{
     display: flex;
-}
-.link-2{
-    margin-left: 10%;
 }
 
 .content-wrapper{
@@ -242,10 +243,11 @@ a {
 }
 
 .buttons{
-    /* position: absolute; */
+    position: relative;
     transform: translateY(42px);
     width: 100%;
     padding: 0 25px;
+    z-index: 10;
 }
 .list-btn{
     border: 1px solid white;
@@ -266,6 +268,7 @@ a {
     height: 100%;
     padding: 18px;
     width: 0%;
+    z-index: 10;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
     -webkit-transition: all .3s ease;
@@ -273,6 +276,11 @@ a {
     visibility: hidden;
     opacity: 0;
     overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none; 
+}
+.side-bar::-webkit-scrollbar {
+    display: none;
 }
 .city-card{
     display: flex;
@@ -320,4 +328,19 @@ a {
 }
 .sans-bold{
     font-family: Neue Machina bold;
+}
+
+/* MAP */
+.map-container{
+    position: absolute;
+    width: 86vw;
+    height: 85vh;
+    margin: 6% 7% 0;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+#map{
+    height: 100%;
+    width: 100%;
+    position: absolute;
 }
