--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,9 +62,11 @@
     font-family: var(--mono-font);
     font-size: 0.92rem;
     color: white;
+    /* cursor: url('cursor.svg'), auto; */
 }
 body{
     background-color: var(--grey);
+    /* cursor: url('cursor.svg'), auto; */
 }
 a {
     text-decoration: none;
@@ -136,7 +138,7 @@ a {
     z-index: 20000;
     align-items: center;
     justify-content: space-between;
-    background: rgba(32, 32, 32, 0.12);
+    background: rgba(32, 32, 32, 0.35);
     backdrop-filter: blur(10px);
     padding: 0 25px;
 }
@@ -148,6 +150,20 @@ a {
     font-family: Neue Machina regular !important;
     font-size: 20px;
     color: var(--yellow) !important;
+}
+.popUp-index{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--grey);
+    width: 45%;
+    border: 1px solid var(--yellow);
+}
+.close{
+    margin-bottom: 9%;
+    font-size: 1.1rem;
+    cursor: pointer;
 }
 .scroll-cue{
     position: absolute;
@@ -199,7 +215,7 @@ a {
     align-items: baseline;
     margin: 8% 0 0;
     padding-bottom: 30%;
-    cursor: url('cursor.svg'), auto;
+    cursor: url('cursor-enter.svg'), auto;
 }
 .yellow-text{
     color: var(--yellow);
@@ -280,7 +296,8 @@ a {
     padding: 18px;
     width: 0%;
     z-index: 10;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(0, 0, 0, 0.6);
+    /* background: rgba(255, 255, 255, 0.2); */
     backdrop-filter: blur(10px);
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
@@ -324,7 +341,6 @@ a {
 }
 
 .waiting-time-big{
-    font-family: var(--sans-font);
     font-size: 38px;
     line-height: 20px;
     margin-top: 12px;
@@ -419,13 +435,22 @@ a {
     border-radius: 50%;
     cursor: pointer;
 }
-.popUp{
-    position: absolute;
-    left: 40%;
-    top: 50%;
+.mapboxgl-popup{
+    width: 45%;
+}
+.mapboxgl-popup-content{
     background-color: var(--grey);
-    width: 35%;
+}
+.mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip{
+    border-top-color: var(--grey);
+}
+.mapboxgl-popup-anchor-top .mapboxgl-popup-tip{
+    border-bottom-color: var(--grey);
+}
+.popUp{
+    /* width: 100%; */
     padding: 2%;
+    z-index: 10;
 }
 .popUp *{
     color: black;
