--- a/CSS/style.css
+++ b/CSS/style.css
@@ -143,7 +143,7 @@ a {
     z-index: 20000;
     align-items: center;
     justify-content: space-between;
-    background: rgba(32, 32, 32, 0.35);
+    background: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(10px);
     padding: 0 25px;
 }
@@ -197,8 +197,10 @@ a {
    width: 100vw;
 }
 .player{
-    height: 100%;
+    /* position: relative; */
     width: 100%;
+    height: 100%;
+    max-height: 100%;
     object-fit: fill;
 }
 .video-wrapper img{
@@ -300,7 +302,6 @@ a {
     width: 0%;
     z-index: 10;
     background: rgba(0, 0, 0, 0.6);
-    /* background: rgba(255, 255, 255, 0.2); */
     backdrop-filter: blur(10px);
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
@@ -400,7 +401,6 @@ a {
 }
 .graph-wrapper{
     margin: 64px 0 24px;
-    border: 1px solid black;
 }
 .ax-x{
     height: 180px;
@@ -449,6 +449,14 @@ a {
 }
 .mapboxgl-popup-anchor-top .mapboxgl-popup-tip{
     border-bottom-color: var(--grey);
+}
+.mapboxgl-popup-close-button{
+    color: black;
+    top: calc(10px + 2%);
+    right: 10px;
+    height: 22px;
+    width: 22px;
+    
 }
 .popUp{
     /* width: 100%; */
@@ -667,7 +675,6 @@ input:checked + .checkbox-slider:before {
 }
 .card-wrapper{
     width: 45%;
-    /* height: 50%; */
     align-content: space-around;
     flex-wrap: wrap;
 }
