--- a/CSS/style.css
+++ b/CSS/style.css
@@ -124,6 +124,9 @@ a {
 .column{
     flex-direction: column;
 }
+.wrap{
+    flex-wrap: wrap;
+}
 .btn-text{
     font-size: 16px;
 }
@@ -694,4 +697,43 @@ input:checked + .checkbox-slider:before {
 }
 .txt-explanation{
     width: 40%;
+}
+
+
+/* SINGLE STREAM SECTION */
+.single-stream-card{
+    width: 25%;
+    height: calc((100vh - 48px)/3);
+    position: relative;
+}
+.single-str-vid-wrapper{
+    position: absolute;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+}
+.player-single-str{
+    height: 120%;
+    width: 210%;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);    
+}
+.stream-info{
+    position: absolute;
+    height: 100%;
+    padding: 10% 5%;
+    justify-content: space-between;
+    z-index: 10;
+}
+.loc-tb-added-card{
+    height: calc((100vh - 48px)/3);
+    padding: 1%;
+    width: 25%;
+    flex-grow: 3;
+    /* display: flex;
+    flex-wrap: wrap; */
+}
+.sad{
+    font-size: 40px;
+    color: black;
 }
