--- a/CSS/style.css
+++ b/CSS/style.css
@@ -381,6 +381,7 @@ a {
     padding: 4px 10px;
     border: 1px solid black;
     margin-bottom: -0.5px;
+    cursor: pointer;
 }
 .location-menu{
     margin-top: 12px;
@@ -392,6 +393,7 @@ a {
 .location-dropdown{
     position: absolute;
     width: 100%;
+    z-index: 10;
 }
 .hidden{
     display: none;
@@ -402,11 +404,14 @@ a {
 .vis{
     opacity: 1;
 }
+
+/* DATA */
 .graph-wrapper{
     margin: 64px 0 24px;
+    position: relative;
 }
 .axes {
-
+    
 }
 .ax-x{
     height: 180px;
@@ -424,6 +429,7 @@ a {
     width: 50%;
     height: 30px;
     background-color: white;
+    position: absolute;
 }
 
 /* MAP */
